// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compact headings can parse compact headings 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Compact Heading",
        },
      ],
      "data": Object {
        "hProperties": Object {
          "id": "compact-heading",
        },
        "id": "compact-heading",
      },
      "depth": 1,
      "type": "heading",
    },
  ],
  "type": "root",
}
`;

exports[`Compact headings can parse headings that are not compact 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "text",
          "value": "Non-compact Heading",
        },
      ],
      "data": Object {
        "hProperties": Object {
          "id": "non-compact-heading",
        },
        "id": "non-compact-heading",
      },
      "depth": 1,
      "type": "heading",
    },
  ],
  "type": "root",
}
`;
